# pdf-squeezer

./: .archived.md  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compress-pdf.sh  pyproject.toml
.github/workflows/: release.yml
src/pdf_compressor/: __init__.py  cli.py
src/pdf_squeezer/: __init__.py  __main__.py  cli.py
src/pdf_squeezer/core/: __init__.py  compressor.py
src/pdf_squeezer/core/strategies/: __init__.py  combined_strategy.py  ghostscript_strategy.py  pikepdf_strategy.py
src/pdf_squeezer/parallel/: __init__.py  executor.py
src/pdf_squeezer/utils/: __init__.py  filesize.py
src/pdfsmith/: __init__.py  cli.py
src/pdfsmith/commands/: compress.py  merge.py  unlock.py
src/pdfsmith/core/: __init__.py  compressor.py
src/pdfsmith/core/strategies/: __init__.py  base.py  ghostscript_strategy.py
src/pdfsmith/merge/: merger.py
src/pdfsmith/parallel/: executor.py
src/pdfsmith/unlock/: unlocker.py
src/pdfsmith/utils/: __init__.py  dependencies.py
